Changed TextView to ListView Enabled real control messages